# rayact

./: .gitignore  .gitmodules  BUILD_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MULTI_WINDOW_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_MULTIPANE.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  build_linux.sh  build_macos.sh  cli.d.ts  cli.js  crypto.d.ts  crypto.js  dev-client.d.ts  dev-client.js  dev-server.d.ts  dev-server.js  index.d.ts  index.js  mmkv.d.ts  mmkv.js  navigation-bottom-tabs.d.ts  navigation-native.d.ts  navigation-stack.d.ts  navigation.d.ts  navigation.js  package-lock.json  package.json  prebuild.d.ts  prebuild.js  rayact.config.json  (+17 more)
.github/workflows/: ci.yml  docs.yml  prebuilts.yml  release.yml
apps/android/app/src/main/cpp/: CMakeLists.txt
apps/desktop/: App.jsx  App.navigation.js  App.raym3.js  App.tailwind.js  App.tailwind.tsx  App.ts  App.windows.js  DEMO_GUIDE.md  README.md  api_test.js  app.js  bench_worker.js  build-kv_probe.sh  canvas.d.ts  demo-colors.js  demo-interactive.js  demo-multipane.js  demo-navigation.js  demo-shapes.js  demo-star.js  gif_worker.js  habit-tracker.tsx  hello.tsx  index.html  kv_probe.c  kv_probe.wasm  kv_wasm_test.tsx  material-gallery.tsx  nav-demo.tsx  nav-tabs-demo.tsx  net_test.js  package.json  prime_worker.js  shared-value-demo.tsx  styles.css  tailwind.config.js  tailwind.css  worker_test.js
apps/dev-app/: README.md  capabilities.json  official-app.json  package.json  rayact.config.json  tsconfig.json
apps/ios/: .gitignore  DevClientBridge.swift  DevLauncherController.swift  DevServerLoader.swift  Info-Release.plist  Info.plist  NavigationHost.swift  ProjectHmrClient.swift  README.md  RayactDevToolsTransport.swift  RayactEngineSession.swift  RayactHost.swift  RayactHostCallbacksBridge.swift  RayactMobileNetwork.swift  RayactRenderScheduler.swift  RayactSurfaceView.swift  SceneDelegate.swift  project.yml
apps/web/: CMakeLists.txt  README.md  package.json  shell.html  web-icons.txt
docker/prebuilts/: Dockerfile.android  Dockerfile.linux  build-android.sh  build-linux.sh  pack-android.sh  pack-linux.sh
docs/: accessibility.md  crash-reporting.md  deployment.md  dev-platform.md  index.md  maintainer-prebuilts.md  multi-window-system.md  package-lock.json  package.json  recovery.md  releasing.md  rollback.md  security.md
docs/.vitepress/: config.ts
docs/guide/: getting-started.md  install.md
docs/public/: CNAME  llms-full.txt  llms.txt
docs/reference/: cli.md  config.md  packages.md
docs/scripts/: gen-config-reference.mjs  gen-llms.mjs
github-release-runtime-smoke/runtime-app/: rayact.config.json
native/android/: android_engine_instance.cpp  android_engine_instance.hpp  engine_runtime.cpp  engine_runtime.hpp  jni_bridge.cpp  platform_android.cpp  system_appearance_android.cpp
native/core/: config_loader.cpp  config_loader.hpp  engine.hpp  platform_asset_fetch.hpp  rayact_module_abi.h  rayact_version.h
native/desktop/: CMakeLists.txt  accessibility_bridge.cpp  accessibility_bridge.hpp  async_storage.cpp  async_storage.hpp  cdp_handler.cpp  cdp_handler.hpp  color_parse.cpp  color_parse.hpp  commit_queue.cpp  commit_queue.hpp  css_bridge.cpp  css_bridge.hpp  data_dir.cpp  data_dir.hpp  desktop_dev_loader.cpp  desktop_dev_loader.hpp  desktop_mdns.cpp  desktop_mdns.hpp  dev_client_bridge.cpp  dev_client_bridge.hpp  devtools.cpp  devtools.hpp  engine_internal.hpp  engine_js.cpp  engine_render.cpp  engine_thread.cpp  engine_thread.hpp  gesture_recognizer.cpp  gesture_recognizer.hpp  js_stdlib.cpp  js_stdlib.hpp  kv_store.cpp  kv_store.hpp  mac_text_input.hpp  mac_text_input.mm  main.cpp  main_impl.hpp  main_new.cpp  module_bus.cpp  (+38 more)
native/desktop/core/: Logger.h
native/desktop/utils/: ScriptValidator.cpp  ScriptValidator.h  TypeStripper.cpp  TypeStripper.h
native/ios/: devtools_ios.cpp  engine_runtime.cpp  engine_runtime.hpp  ios_bridge.hpp  ios_bridge.mm  ios_engine_instance.cpp  ios_engine_instance.hpp  ios_host_callbacks.hpp  ios_plugins_register.cpp  platform_ios.cpp
native/plugins/: CMakeLists.txt
native/plugins/mmkv/: CMakeLists.txt  mmkv_plugin.cpp
native/plugins/secure-store/: CMakeLists.txt  secure_store_plugin.cpp
native/shared/: rayactpack.cpp  rayactpack.h  test_rayactpack.cpp
native/tests/: CMakeLists.txt  test.cpp
native/web/: main_web.cpp  web_js_worker.cpp  web_js_worker.hpp  web_platform.hpp  web_stubs.cpp  web_text_input.cpp  web_websocket.cpp
prebuild-scripts/: proxy_coep_server.py
release-tarballs/: SHA256SUMS
schema/: rayact.module.schema.json
scripts/: bootstrap-split-repos.mjs  build-dev-app.mjs  build-ios-module-xcframeworks.sh  build-ios-xcframework.sh  build-macos-module-artifacts.sh  build-prebuilts-macos.sh  build-prebuilts.mjs  build-prebuilts.sh  build-web-release-host.sh  build-workspaces.mjs  bump-version.mjs  clean-workspaces.mjs  generate-dev-app-capabilities.mjs  generate-release-set.mjs  pack-release-assets.mjs  publish-split-repos.mjs  record-dev-app-smoke.mjs  release-channel.mjs  replace-github-release.mjs  sanitize-release-web-host.mjs  serve-release-assets.mjs  smoke-port-fallback.mjs  split-repo-map.mjs  stage-assets.mjs  stage-compat-dist.mjs  sync-split-repos.mjs  test-module-hmr.mjs  update-module-artifact-hashes.mjs  verify-android.sh  verify-common.sh  verify-desktop-dom.py  verify-desktop.sh  verify-dev-app-modules.mjs  verify-ios.sh  verify-packages.mjs  verify-performance-budgets.mjs  verify-prebuilts.sh  verify-release-matrix.sh  verify-release-set.mjs  verify-reproducibility.mjs  (+2 more)
src/cli/: cli.ts  desktop.ts  help.ts  parse.ts
src/core/: FlatList.tsx  index.ts
src/dev-client/: DevConsole.tsx  DevLauncherUI.tsx  DevMenu.tsx  InspectorPanel.tsx  devLauncherStyles.ts
src/dev-server/: adb.ts  bundler.ts  compile.ts  index.ts  mdns.ts  qr.ts  server.ts  tui.tsx  types.ts  webDev.ts
src/navigation/: bottom-tabs.tsx  index.tsx
src/prebuild/: constants.ts  prebuild.ts  prebuiltHost.ts  webServe.ts
src/react/: Keyboard.ts  (+4 more)
tools/: subset_icon_font.py
(+119 files in other folders)
